fixed class ProductRepositoryImpl